--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -30,8 +30,49 @@ div.signup-form form .btn-container{
   display: flex;
   gap: 0.2em;
 }
+div.login-form{
+  width: 350px;
+  margin:0 auto;
+  margin-top:1em ;
+}
+div.login-form h1{
+  text-align: center;
+  margin-bottom: 0.2em;
+}
+
+div.login-form form{
+  display: flex;
+  flex-direction: column;
+  gap: 0.25em;
+}
+div.login-form form input{
+  padding: 1em;
+}
+div.login-form form label{
+  font-size: 1.2em;
+}
+
+div.login-form form .btn-container{
+  display: flex;
+  gap: 0.2em;
+}
 button{
   flex: 1;
   padding: 10px 12px;
   background-color: none;
+}
+
+nav{
+  height: 80px;
+  background-color: aliceblue;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+nav a{
+  padding: 10px 12px;
+  text-decoration: none;
+}
+nav a.active{
+  font-weight: bolder;
 }
